# pCubit

./: .gitignore  .readthedocs.yaml  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: base.rst  conf.py  core.rst  index.rst  statistical_generator_pores.ipynb  stats.rst
docs/source/_static/: custom.css
docs/source/_templates/: footer.html  layout.html
pcubit/: __init__.py  base.py  core.py  stats.py
pcubit/tests/: __main__.py  test_examples.py  test_many.py  test_one.py  test_style.py
