[project]
name = "pCubit"
version = "0.1.5"
description = "Placement of particles/pores using Cubit."
authors = [
  {email = "mrbuche@sandia.gov"},
  {name = "Michael R. Buche"}
]
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
]
classifiers = [
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python',
]

[project.urls]
Documentation = "https://pcubit.readthedocs.io"
Homepage = "https://sandialabs.github.io/pCubit"
Repository = "https://github.com/sandialabs/pCubit"
